--- a/src/sections/ProjectsPreview.css
+++ b/src/sections/ProjectsPreview.css
@@ -3,7 +3,8 @@
   background-image: radial-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px);
   background-size: 24px 24px;
   position: relative;
-  overflow: hidden;
+  z-index: 3;
+  overflow: visible;
 }
 
 .project__container {
@@ -22,7 +23,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   width: min(30vw, 350px);
   aspect-ratio: 3 / 4;
   overflow: hidden;
